// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration • Email required 1`] = `
Object {
  "feedback": Object {
    "email": Array [
      "A valid email is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Registration • Existing unverified email 1`] = `
Object {
  "message": "Email Verification request submitted successfully",
}
`;

exports[`Registration • Existing verified email 1`] = `
Object {
  "message": "Email Verification request submitted successfully",
}
`;

exports[`Registration • First name required 1`] = `
Object {
  "feedback": Object {
    "firstName": Array [
      "A valid first name is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Registration • Invalid email 1`] = `
Object {
  "feedback": Object {
    "email": Array [
      "A valid email is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Registration • Last name validation 1`] = `
Object {
  "feedback": Object {
    "lastName": Array [
      "A valid last name is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Registration • Password required 1`] = `
Object {
  "feedback": Object {
    "password": Array [
      "A valid password is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Registration • Success 1`] = `
Object {
  "message": "Email Verification request submitted successfully",
}
`;

exports[`Registration • Weak password 1`] = `
Object {
  "feedback": Object {
    "password": Array [
      "This is a top-100 common password",
      "Add another word or two. Uncommon words are better.",
    ],
  },
  "message": "Validation Error",
}
`;
